--- a/API_Practice.ipynb
+++ b/API_Practice.ipynb
@@ -457,6 +457,53 @@
     "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
     "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bb0dfcaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1658354925.4476686"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4a1415e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'07/20/22'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
   }
  ],
  "metadata": {
